2thread-change-print