@@ -1,6 +1,8 @@
 package com.jw.thread;
 
 import org.apache.commons.lang3.concurrent.BasicThreadFactory;
+import org.openjdk.jol.info.ClassLayout;
+import org.openjdk.jol.vm.VM;
 
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.LinkedBlockingDeque;
@@ -8,72 +10,79 @@ import java.util.concurrent.ThreadPoolExecutor;
 import java.util.concurrent.TimeUnit;
 
 /**
+ * -XX:BiasedLockingStartupDelay=0 默认4s启动
+ * 开启偏向锁：-XX:+UseBiasedLocking -XX:BiasedLockingStartupDelay=0
+ * 关闭偏向锁：-XX:-UseBiasedLocking
+ *
  * @Description: test T2
  * @Package: com.jw.thread
  * @ClassName: T2
  * @Author: james.guo
  * @Date: 2019/7/23 16:13
  * @Version: 1.0
- *
+ * <p>
  * Copyright (C) 2019 JW All rights reserved.
  */
 public class T2 {
 
-	public static void main(String[] args) throws InterruptedException {
+    public static void main(String[] args) throws InterruptedException {
+        BasicThreadFactory factory = new BasicThreadFactory.Builder().namingPattern("test thread queue-%d").build();
+        ThreadPoolExecutor pool = new ThreadPoolExecutor(2, 5,
+                1, TimeUnit.SECONDS, new LinkedBlockingDeque<>(3),
+                factory, new ThreadPoolExecutor.CallerRunsPolicy());
+        pool.allowCoreThreadTimeOut(true);
 
-		BasicThreadFactory factory = new BasicThreadFactory.Builder().namingPattern("test thread queue-%d").build();
-		ThreadPoolExecutor pool = new ThreadPoolExecutor(2, 5,
-				1, TimeUnit.SECONDS, new LinkedBlockingDeque<>(3),
-				factory, new ThreadPoolExecutor.CallerRunsPolicy());
-		pool.allowCoreThreadTimeOut(true);
+        System.out.println(VM.current().details());
+        System.out.println(ClassLayout.parseInstance(pool).toPrintable());
+        System.out.println("~~~~~~~~~");
 
-		for (int i = 0; i < 3; i++) {
-			pool.execute(() -> {
-				try {
-					System.out.println(Thread.currentThread().getName());
-					TimeUnit.SECONDS.sleep(2);
-				} catch (InterruptedException e) {
-					e.printStackTrace();
-				}
-			});
-		}
+        for (int i = 0; i < 3; i++) {
+            pool.execute(() -> {
+                try {
+                    System.out.println(Thread.currentThread().getName());
+                    TimeUnit.SECONDS.sleep(2);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            });
+        }
 
-		for (int i = 0; i < 10; i++) {
-			System.out.println(pool.toString());
-			TimeUnit.SECONDS.sleep(1);
-		}
-		System.out.println("XXX");
+        for (int i = 0; i < 10; i++) {
+            System.out.println(pool.toString());
+            TimeUnit.SECONDS.sleep(1);
+        }
+        System.out.println("XXX");
 
-		pool.allowCoreThreadTimeOut(false);
+        pool.allowCoreThreadTimeOut(false);
 
-		CompletableFuture.runAsync(() -> {
-			try {
-				for (int i = 0; i < 300; i++) {
-					System.out.println(pool.toString());
-					TimeUnit.MILLISECONDS.sleep(50);
-				}
-			} catch (Exception e) {
-				e.printStackTrace();
-			}
-		});
+        CompletableFuture.runAsync(() -> {
+            try {
+                for (int i = 0; i < 300; i++) {
+                    System.out.println(pool.toString());
+                    TimeUnit.MILLISECONDS.sleep(50);
+                }
+            } catch (Exception e) {
+                e.printStackTrace();
+            }
+        });
 
-		for (int i = 0; i < 20; i++) {
-			pool.execute(() -> {
-				try {
-					System.out.println(Thread.currentThread().getName());
-					TimeUnit.SECONDS.sleep(1);
-				} catch (InterruptedException e) {
-					e.printStackTrace();
-				}
-			});
-		}
+        for (int i = 0; i < 20; i++) {
+            pool.execute(() -> {
+                try {
+                    System.out.println(Thread.currentThread().getName());
+                    TimeUnit.SECONDS.sleep(1);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            });
+        }
 
-		try {
-			pool.shutdown();
-		} catch (Exception e) {
-			pool.shutdownNow();
-		}
+        try {
+            pool.shutdown();
+        } catch (Exception e) {
+            pool.shutdownNow();
+        }
 
-	}
+    }
 
 }
